docs/tests/typing/bad/testfile-for-1.cpp
void foo() {}
int main() { for( ; foo(); ); }
